--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "test:unit": "vitest"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "jquery": "^3.7.1",
     "pinia": "^2.1.7",
     "vue": "^3.4.15",
+    "vue-axios": "^3.5.2",
     "vue-feather-icons": "^5.1.0",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vue-toast-notification": "^3.1.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.3",
